# yt_privacy

./: README.md  main.py  pyproject.toml
user_folder/: videos_info.txt
